--- a/calculator/calc.css
+++ b/calculator/calc.css
@@ -1,46 +1,66 @@
-.calc{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+.calc {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 10px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    padding: 50px 40px;
-    border-radius: 10px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  padding: 50px 40px;
+  border-radius: 10px;
+
+  border: 2px solid rgb(50, 50, 50);
+  border-bottom: 5px solid rgb(50, 50, 50);
+
 }
-input{
-    padding: 15px;
-    width: 250px;
-    border-radius: 5px;
-    outline: none;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    border: none;
+input {
+  padding: 15px;
+  width: 250px;
+  border-radius: 5px;
+  outline: none;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  /* border: none; */
+
+  border: 2px solid rgb(50, 50, 50);
+  border-bottom: 5px solid rgb(50, 50, 50);
 }
 
-button{
-    padding: 10px 20px;
-    margin: 5px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    background-color: white;
-    border-radius: 8px;
-    border: none;
-    font-weight: 600;
-    font-size: 1rem;
-    width: 50px;
-    height: 45px;
+button {
+  padding: 10px 20px;
+  margin: 5px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  background-color: white;
+  border-radius: 8px;
+
+  font-weight: 600;
+  font-size: 1rem;
+  width: 50px;
+  height: 45px;
+
+  border: 2px solid rgb(50, 50, 50);
+  border-bottom: 5px solid rgb(50, 50, 50);
+  transform: translate(0, -3px);
+  cursor: pointer;
+  transition: 0.2s;
+  transition-timing-function: linear;
 }
-.black{
-    background-color: black;
-    color: white;
+button:hover {
+  transform: translate(0, 0);
+  border-bottom: 2px solid rgb(50, 50, 50);
 }
-.red{
-    background-color: red;
-    color: white;
+
+.black {
+  background-color: black;
+  color: white;
+  border: 2px solid rgb(240, 242, 243);
+  border-bottom: 5px solid rgb(242, 244, 246);
+}
+.red {
+  background-color: red;
+  color: white;
 }
