--- a/News/news.css
+++ b/News/news.css
@@ -84,6 +84,7 @@ h2{
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 30px;
+    padding-bottom: 20px;
 }
 .imgContainer .img{
     width: 25%;
